force-app/main/default/objects/CoordonneesBancaires__c/CoordonneesBancaires__c.object-meta.xml
<CustomObject>
    <label>Coordonnées Bancaire</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coordonnées Bancaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>