force-app/main/default/objects/CoordonneesBancaires__c/fields/DetailBanque__c.field-meta.xml
<CustomField>
    <fullName>DetailBanque__c</fullName>
    <label>Detail Banque</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>