force-app/main/default/objects/CoordonneesBancaires__c/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Devise</label>
    <referenceTo>devise__c</referenceTo>
    <relationshipLabel>Coordonnées Bancaires</relationshipLabel>
    <relationshipName>CoordonneesBancaires</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>