force-app/main/default/objects/CoordonneesBancaires__c/fields/Id_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Id_Ebury__c</fullName>
    <description>Id ebury pour un bénéficiare (basant sur la devise)</description>
    <externalId>true</externalId>
    <label>Id Ebury</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>