force-app/main/default/objects/CoordonneesBancaires__c/fields/Identifiant_banque__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_banque__c</fullName>
    <inlineHelpText>Bank identifier Ebury</inlineHelpText>
    <label>Identifiant banque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>