force-app/main/default/objects/CoordonneesBancaires__c/fields/Nom_de_la_banque__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_la_banque__c</fullName>
    <inlineHelpText>Bank name Ebury</inlineHelpText>
    <label>Nom de la banque</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>