force-app/main/default/objects/CoordonneesBancaires__c/fields/NumCompte__c.field-meta.xml
<CustomField>
    <fullName>NumCompte__c</fullName>
    <label>N° de compte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>