force-app/main/default/objects/CoordonneesBancaires__c/fields/PaysBeneficiaire__c.field-meta.xml
<CustomField>
    <fullName>PaysBeneficiaire__c</fullName>
    <label>Adresse de la banque</label>
    <type>Address</type>
</CustomField>