force-app/main/default/objects/CoordonneesBancaires__c/fields/Personne__c.field-meta.xml
<CustomField>
    <fullName>Personne__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Personne</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Coordonnées Bancaires</relationshipLabel>
    <relationshipName>InformationsBancaires</relationshipName>
    <type>Lookup</type>
</CustomField>