force-app/main/default/objects/CoordonneesBancaires__c/fields/Prestataire__c.field-meta.xml
<CustomField>
    <fullName>Prestataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coordonnées Bancaires</relationshipLabel>
    <relationshipName>Coordonnees_Bancaires</relationshipName>
    <type>Lookup</type>
</CustomField>