force-app/main/default/objects/CoordonneesBancaires__c/fields/Titulaire_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Titulaire_du_compte__c</fullName>
    <label>Titulaire du compte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>